tags/2013-08-29_cppreference/Archive/fc95cd562800c051b92d067de4b3444c-76514b8f9424a3be7ad7d477f762fdd0/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp -ftrapv
main.cpp: In function ‘int main()’:
main.cpp:13:16: error: invalid initialization of reference of type ‘std::string (&)[10] {aka std::basic_string<char> (&)[10]}’ from expression of type ‘std::string [3] {aka std::basic_string<char> [3]}’
     changeStr(s);
                ^
main.cpp:5:6: error: in passing argument 1 of ‘void changeStr(std::string (&)[10])’
 void changeStr( std::string (&strings)[10] )
      ^
